corrects wrong font awesome symbol

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -19,10 +19,8 @@ html, body {
 
 .column {
     background-color: rgba(255, 255, 255,.8);
-}
-
-.right-column {
-    border-left: 4px solid rgba(255,0,0,.7);
+    border-left: 2px solid rgba(0,0,0,.5);
+    border-right: 2px solid rgba(0,0,0,.5);
 }
 
 .recent-comments {
